--- a/about.qmd
+++ b/about.qmd
@@ -2,4 +2,6 @@
 title: "About"
 ---
 
-About this site
+## About Me
+My name is **Jacob Khaykin**, and I currently go to *Solon High School*.
+[Kane's Free Data Science Bootcamp](https://bootcamp.davidkane.info)
